--- a/index.html
+++ b/index.html
@@ -1,78 +1,144 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
+​
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style/index.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Staatliches&display=swap" rel="stylesheet">
+
     <title>Chaz Carbis</title>
+
 </head>
+
 <div class="top">
+
     <h1>Chaz Carbis</h1>
+
     <nav>
+
         <a href="index.html">Home</a>
+
         <a href="about.html">About</a>
+
         <a href="contact.html">Contact</a>
+
         <a href="projects.html">Projects</a>
+
     </nav>
+
 </div>
 
+​
+
 <body>
+
     <section class="mainBlock">
+
         <div class="namePic">
+
             <img src="style/Chaz_Carbis.png" alt="A stylized picture of Chaz Carbis's name">
-<br>
+
+            <br>
+
             <a href="#">My Projects</a>
+
         </div>
+
     </section>
+
+    ​
 
     <section class="topBox">
+
         <div class="leftTop">
+
             <img src="style/Untitled_design(1).png" alt="Homepage of Mobile Mats Website">
+
             <br>
+
             <a href="https://www.mobilemats.com/">Mobile Mats Web and Mobile Project</a>
+
         </div>
 
+        ​ ​
 
         <div class="midTop">
+
             <img src="style/richy-great-MAYEkmn7G6E-unsplash.jpg" alt="Computer Screen with github open">
+
             <br>
+
             <a href="https://github.com/LilCthulu">My Github</a>
+
         </div>
 
+        ​ ​
 
         <div class="rightTop">
-            <img src="style/alexander-kaunas-kTCZuDtYgzc-unsplash.jpg"
-                alt="Desert scene at night with colorful spiral trailing into the distance">
+
+            <img src="style/alexander-kaunas-kTCZuDtYgzc-unsplash.jpg" alt="Desert scene at night with colorful spiral trailing into the distance">
+
             <br>
-                <a href="#">Future Projects Will Go Here</a>
+
+            <a href="#">Future Projects Will Go Here</a>
+
         </div>
+
     </section>
 
+    ​ ​
 
-    <div class="leftBotttom">
-        <img src="style/tim-swaan-eOpewngf68w-unsplash.jpg" alt="A bridge leading into a lush forest">
-        <h2>I love being in nature</h2>
-    </div>
+    <section class='bottomBox'>
 
+        <div class="leftBotttom">
 
-    <div class="midBotttom">
-        <img src="style/jonathan-borba-uB7q7aipU2o-unsplash.jpg"
-            alt="A chefe chopping various veggitables on a cutting board">
-        <h2>I love to cook</h2>
-    </div>
+            <img src="style/tim-swaan-eOpewngf68w-unsplash.jpg" alt="A bridge leading into a lush forest">
 
+            <h2>I love being in nature</h2>
 
-    <div class="rightBotttom">
-        <img src="style/alexander-jawfox-ts2e1Dia5Ec-unsplash.jpg" alt="A full wet bar with evening lighting">
-        <h2>I am a amatuer mixologist</h2>
-    </div>
+        </div>
+
+        ​ ​
+
+        <div class="midBotttom">
+
+            <img src="style/jonathan-borba-uB7q7aipU2o-unsplash.jpg" alt="A chefe chopping various veggitables on a cutting board">
+
+            <h2>I love to cook</h2>
+
+        </div>
+
+        ​ ​
+
+        <div class="rightBotttom">
+
+            <img src="style/alexander-jawfox-ts2e1Dia5Ec-unsplash.jpg" alt="A full wet bar with evening lighting">
+
+            <h2>I am a amatuer mixologist</h2>
+
+        </div>
+
+        ​
+    </section>
 
 </body>
 
+​
+
 <footer>
+
     <a href="https://www.linkedin.com/in/chaz-carbis-4a79b91b9/">Contact Me</a>
+
 </footer>
+
+​
 
 </html>
